# split

./: .gitignore  README.md  Split.json  cloud-init.yaml  deploy-objstore.sh  deploy.sh  package.sh  pyproject.toml  setup.sh  ssm_secrets.py
db/: schema.sql
fn-ai-agent/: func.py  func.yaml  lambda_function.py  requirements.txt  vault.py
fn-image-extractor/: func.py  func.yaml  lambda_function.py  requirements.txt
fn-slack-reply/: func.py  func.yaml  lambda_function.py  requirements.txt
fn-slack-webhook/: func.py  func.yaml  lambda_function.py  requirements.txt
step-functions/: image-flow.asl.json  text-flow.asl.json
workflows/: image-flow.yaml  text-flow.yaml
