[project]
name = "split"
version = "0.1.0"
description = "OCI Functions for invoice bill-splitting via Slack + Gemini"
requires-python = ">=3.11"

# Core dependencies shared across all functions
dependencies = [
    "boto3>=1.42.73",
    "fdk>=0.1.72",
    "oci>=2.126.0",
]

[project.optional-dependencies]
# Per-function extras — install what you need locally
webhook   = []                          # no extra deps beyond core
extractor = ["google-generativeai>=0.8.0", "requests>=2.32.0"]
agent     = ["langchain>=0.3.0", "langchain-google-genai>=2.0.0", "langchain-core>=0.3.0"]
reply     = ["slack-sdk>=3.31.0"]

# All function deps at once (useful for CI / full local dev)
all = [
    "google-generativeai>=0.8.0",
    "langchain>=0.3.0",
    "langchain-google-genai>=2.0.0",
    "langchain-core>=0.3.0",
    "requests>=2.32.0",
    "slack-sdk>=3.31.0",
]

dev = [
    "pytest>=8.3.0",
    "pytest-mock>=3.14.0",
    "ruff>=0.9.0",
]

[tool.uv]
package = false
dev-dependencies = [
    "pytest>=8.3.0",
    "pytest-mock>=3.14.0",
    "ruff>=0.9.0",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
